--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,17 @@ uuid = "da42d712-c769-4054-aef0-2cf3386e6ac6"
 authors = ["franklynwang <franklynw2000@gmail.com>"]
 version = "0.1.0"
 
+[compat]
+julia=1.6
+AbstractAlgebra ="c3fe647b-3220-5bb0-a1ea-a7954cac585d"
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
+JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
+PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
+TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
+
 [deps]
 AbstractAlgebra = "c3fe647b-3220-5bb0-a1ea-a7954cac585d"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
